--- a/src/Components/Products/Products.css
+++ b/src/Components/Products/Products.css
@@ -1,8 +1,8 @@
-.product {
+.section {
     height: 100vh;
     width: 100%;
 
-    padding: 60px 0;
+    padding: 110px 0;
 
     background-position: center;
     background-repeat: no-repeat;
@@ -13,16 +13,25 @@
     scroll-snap-align: start;
 }
 
-.product-container {
-    padding-top: 64px;
+.details {
+    opacity: 0;
+    position: fixed;
+    top: 0;
+    padding: 160px 0 110px;
+    height: 100vh;
     display: flex;
     text-align: center;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    transition: all 0.3s;
 }
 
-.product-container>div>h2 {
+.details.active {
+    opacity: 1;
+}
+
+.details>div>h2 {
     font-size: 3rem;
     font-weight: 500;
 }
@@ -37,18 +46,28 @@
     border-radius: 5px;
     margin: 0 12px;
 
-    width: 246px;
+    width: 256px;
     height: 40px;
 }
 
 .button-dark {
     color: white;
-    background-color: rgba(0, 0, 0, 0.65);
-    backdrop-filter: blur(10px);
+    background-color: rgba(23, 26, 32, 0.8);
+    backdrop-filter: blur(8px);
 }
 
 .button-light {
-    color: #2d2d2d;
-    background-color: rgba(255, 255, 255, 0.65);
-    backdrop-filter: blur(10px);
+    color: #393c41;
+    background-color: rgba(244, 244, 244, 0.6);
+    backdrop-filter: blur(8px);
+}
+
+.button-light>h3 {
+    font-weight: 600;
+}
+
+@media only screen and (max-width: 600px) {
+    .button-group>button {
+        width: 90vw;
+    }
 }
